# qt-interactive-feedback-mcp

./: .gitignore  CHANGELOG.md  README.md  TROUBLESHOOTING.md  feedback_daemon.py  feedback_ui.py  feishu_client.py  mention_completer.py  pyproject.toml  server.py  settings_dialog.py  setup.sh
.cursor/rules/: mcp-feedback.mdc
