[project]
name = "interactive-feedback-with-capture"
version = "0.2.4"
description = "MCP server for interactive user feedback with screenshot capture in AI-assisted development tools."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastmcp>=3.0.0",
    "pyside6>=6.8.2.1",
]

[project.urls]
Homepage = "https://github.com/dragonstylecc/Interactive-Feedback-With-Capture-MCP"
Repository = "https://github.com/dragonstylecc/Interactive-Feedback-With-Capture-MCP"
