[project]
name = "interactive-feedback-with-capture"
version = "0.2.4"
description = "MCP server for interactive user feedback with screenshot capture in AI-assisted development tools."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastmcp>=3.0.0",
    "pyside6==6.4.3",
]

[project.urls]
Homepage = "https://github.com/rooney2020/qt-interactive-feedback-mcp"
Repository = "https://github.com/rooney2020/qt-interactive-feedback-mcp"
